Fixed section headings alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,10 @@ section {
  flex-wrap: wrap;
 }
 
+section h2 {
+ text-align: center;
+}
+
 p {
  padding-bottom: 1rem;
  text-align: justify;
